(executable
 (name query)
 (modules query)
 (libraries proton lwt.unix))

(executable
 (name compression_example)
 (modules compression_example)
 (libraries proton lwt.unix))

(executable
 (name tls_example)
 (modules tls_example)
 (libraries proton lwt lwt.unix))

(executable
 (name nullable_dt64)
 (modules nullable_dt64)
 (libraries proton lwt lwt.unix))

(executable
 (name multi_nullable)
 (modules multi_nullable)
 (libraries proton lwt lwt.unix))
