(library
 (name proton)
 (public_name proton)
(libraries unix lz4 zstd tls-lwt x509 ca-certs lwt.unix domain-name mirage-crypto)
(modules defines protocol varint binary errors read_helpers context buffered_reader block_info columns_types columns_primitives columns_datetime columns_complex columns_lowcardinality columns block connection client cityhash compress pool_lwt proton)
 (foreign_stubs
  (language cxx)
  (names cityhash_stubs)
  (flags -std=c++11)))
